--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,7 @@
-# Application Name
-spring.application.name=LocalServiceFinder
-
-# Use the port from the environment, default to 8080 locally
-server.port=${PORT:8080}
-
-# --- Database Connection (Values from Render Environment) ---
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-
-# JPA and Hibernate Settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# --- JWT Secret (Value from Render Environment) ---
-jwt.secret=${JWT_SECRET}
-jwt.expiration-ms=86400000
-
-# Logging
-logging.level.org.springframework.security=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
+server.port=${PORT:8080}
